# glibc-adapter

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  adapter-register.h  dlfcn-adapter.c  errno-adapter.c  fcntl-adapter.c  glibc-adapter.c  glibc-adapter.h  malloc-adapter.c  pthread-adapter.c  stdio-adapter.c  stdlib-adapter.c  string-adapter.c
test/: CMakeLists.txt  test-glibc-adapter.c
